src/pages/ru/v1.20.0/rn-sdk/init.mdx
---
title: "SDK для React Native - Инициализация SDK"
metaTitle: "SDK для React Native - Инициализация SDK"
metaDescription: "Параметры конфигурации для метода-конструктора трекера React Native для iOS"
---
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

<Aside type="caution">
	SDK для React Native находится в стадии бета-тестирования. Не стесняйтесь оставлять нам отзывы или сообщать о любых проблемах, с которыми вы можете столкнуться, в нашем [Slack](https://slack.openreplay.com) или загляните на наш [Форум](https://forum.openreplay.com).
</Aside>

## Установка

Следующая команда установит трекер, а вместе с ним и SDK, чтобы вы могли воспользоваться всеми возможностями трекера.

```bash
npm i @openreplay/react-native
```

## Инициализация

При создании экземпляра трекера OpenReplay вам доступно несколько параметров конфигурации, позволяющих настроить многие аспекты записи и работы с ней. Вы должны задать параметр `projectKey` в конструкторе. Это значение можно получить в панели управления OpenReplay в разделе 'Preferences > Projects'.

<Aside type="tip">
	Обратите внимание: если у вас несколько проектов, нужно внимательно выбирать ключ проекта.
</Aside>


### Добавление кода отслеживания

Добавьте следующий код в ваш корневой файл:

```js
import Openreplay from '@openreplay/react-native';

// ...
useEffect(() => {
	OpenReplay.tracker.startSession(
		'yourProjectKey',
		options, // explained below, set {} if empty
		'https://local.openreplay.instance/ingest' // not required if you're using managed version
	);
}, [])
```

### Очистка данных

Подробнее см. в разделе [как очищать данные в записях React Native](/rn-sdk/sanitization).

## Параметры инициализации

По умолчанию всем параметрам присвоено значение `true`:

- `crashes: Bool` Включает crashlytics.
- `analytics: Bool` Включает аналитическое отслеживание отмеченных представлений.
- `performances: Bool` Включает слушатель производительности.
- `logs: Bool` Включает слушатель логов.
- `screen: Bool` Включает запись экрана.

## Методы

<div class="grid grid-cols-12 md:grid-cols-12 gap-3 md:gap-4">
	<ORCard title="Познакомьтесь с методами и модулями SDK для React Native" url="/rn-sdk/modules" hideIcon={true} width="100"/>
</div>
